[project]
name = "settle-up-scripts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.166.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.2.0",
    "loguru>=0.7.3",
    "oauth2client>=4.1.3",
    "pyrebase>=3.0.18",
    "pyrebase4>=4.8.0",
    "requests>=2.32.3",
    "setuptools>=78.1.0",
    "wheel>=0.45.1",
]
